test/bad/loops/label01.px

while false label a do
    break b
